src/objects/RunScenario__c.object
<CustomObject>
    <fields>
        <fullName>Business_Partner_Name__c</fullName>
        <label>Business Partner Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_individual__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business_individual</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>RunScenarios</relationshipLabel>
        <relationshipName>RunScenarios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ORM_Account_Executive__c</fullName>
        <formula>Business_individual__r.ORM_Account_Executive_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ORM Account Executive</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <formula>Business_individual__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <description>Team - ORM AE (Source via Related Individual &gt; ORM Account Executive Name)</description>
        <formula>Business_individual__r.Account.Account_Executive_Name__r.Team__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Team - ORM AE (Source via Related Individual &gt; ORM Account Executive Name)</inlineHelpText>
        <label>Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scenarios_Run__c</fullName>
        <label>Scenarios Run</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Scenarios_Run__c</fullName>
        <label>Total Scenarios Run</label>
        <summaryForeignKey>Run_Scenario_Status_History__c.Scenario_Ran__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>RunScenario</label><nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>RunScenario Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>RunScenarios</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Business_individual__c</columns>
        <columns>Related_Account__c</columns>
        <columns>ORM_Account_Executive__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Business_Partner_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>